fixed bottom validation style for resizing and left and right fly-outs ensuring scrollbars always accessible and closebtn and title stay fixed.

--- a/static/css/panel.styl
+++ b/static/css/panel.styl
@@ -13,11 +13,6 @@ borderColor = #e4e4e4
 sideNavColor = #337ab7
 
 // unable to influence hot style with css - need to use document....style in html
-// .editor
-//   .htSearchResult
-//   .search-result-hot
-//     background-color rgba(100, 237, 217, 0.6) !important
-//     border 5px solid black !important
 
 #header-panel
   display: block !important
@@ -211,7 +206,6 @@ sideNavFooterHeight = 70px
 #main-bottom-panel
   box-sizing border-box !important
   height 55px
-  // width: 100%
   position fixed
   bottom 0
   left 0
@@ -228,22 +222,23 @@ sideNavFooterHeight = 70px
     overflow-y scroll
     width 100%
     &.left
-      margin-left sideNavMargin
-      padding-right sideNavMargin
+      left sideNavMargin
       width auto
+      right 0px
     &.right
-      margin-right sideNavMargin !important
-      margin-left 0
       width auto
+      right sideNavMargin
     #message-panel
+       width 100%
       .affix
         background-color #f5f5f5
-        width 97%
-        &.closebtn
+        // must set consistent width to ensure message title and close button in same position relative to LHS and RHS
+        left 15px
+        right 15px
+        width auto
+        .closebtn
           position relative
-          margin-right 15px
-          // right 50
-          z-index 300
+          margin-right 0px
       .btn-default
         color #000
       .message-title
@@ -257,18 +252,16 @@ sideNavFooterHeight = 70px
       .errors-content
         padding-top 90px
     &.left #message-panel
-      padding-right 0px
       .affix
-        margin-right sideNavMargin
-      //   margin-left sideNavMargin
-      //   margin-right sideNavMargin
+        padding-left sideNavMargin
+        margin-right 10px
+        right 15px
     &.right #message-panel
       margin-right sideNavMargin
       padding-right 0
       margin-left 0
       .affix
-        padding-right sideNavMargin
-        // margin-left 0
+        margin-right sideNavMargin
     &.closed #message-panel
       margin-left 0
       padding-right 15px
@@ -282,13 +275,9 @@ sideNavFooterHeight = 70px
   display: block
   padding 0
   margin 0
-  // overflow-y hidden
   .left
     float left
     display inline-block
-    // &.disabled
-    //   pointer-events none
-    //   cursor default
   .right
     float right
     display inline-block
